changed a link to github page

--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
 		</div>
 		<center>
 			<p>1964</p>
-			<p><a href="./mainvisual.zip">Download</a>
+			<p><a href="https://github.com/yskt0810/edim17">Source</a>
 		</center>
 	</div>	
 	<div id="view_2016">
 		<div id="container_2016"><script src="./datas/2016.js"></script></div>
 		<center>
 			<p class="uk-text-center">2016</p>
-			<p class="uk-text-center"><a href="./mainvisual.zip">Download</a>
+			<p class="uk-text-center"><a href="https://github.com/yskt0810/edim17">Source</a>
 		</center>
 	</div>
 	
